# switchboard

./: CLAUDE.md  Cargo.toml
src/: app.rs  main.rs
src/models/: mod.rs  protocol.rs
src/screens/: browser.rs  mod.rs
src/services/: ascii_art.rs  launcher.rs  mod.rs  theme.rs
src/utils/: mod.rs
